--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -5,12 +5,6 @@
   {% endblock %}
 {% endblock %}
 {% block content %}
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <h1> {{ messages[0] }} </h1>
-      <h1> {{ messages[1] }} </h1>
-    {% endif %}
-  {% endwith %}
   <h1> LOGIN </h1>
   <form action = "/login", method = "POST">
     Enter your username:
@@ -20,6 +14,13 @@
     <input type = "submit" name = "sub1" value = "login"> <br>
   </form>
   <h1> REGISTER </h1>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% if messages[1] == "register error" %}
+        <h1> {{ messages[0] }} </h1>
+      {% endif %}
+    {% endif %}
+  {% endwith %}
   <form action = "/register", method = "POST">
     Enter your username:
     <input type = "text" name = "username"> <br><br>
