--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,10 @@
   {% for element in storyName %}
     {{element}}
   {% endfor %}
+  <br><br><br>
+  <form action = "/create">
+    <input type = "submit" name = "makenew" value = "Create new story">
+  </form>
 {% endblock %}
 {% block footer %}
 {% endblock %}
