Tried to add results from creating a new story

--- a/templates/newpage.html
+++ b/templates/newpage.html
@@ -10,6 +10,10 @@
     <input type = "text" name = "story" value = "Story beginning"> <br>
     <input type = "submit" name = "submit" value = "Submit">
   </form>
+  <br><br>
+  <form action = "/", methods = "POST">
+    <input type = "submit" name = "cancel" value = "Cancel">
+  </form>
 {% endblock %}
 {% block footer %}
 {% endblock %}
