--- a/templates/newpage.html
+++ b/templates/newpage.html
@@ -20,7 +20,7 @@
     <input type = "submit" name = "submit" value = "Submit">
   </form>
   <br><br>
-  <form action = "/", method = "POST">
+  <form action = "/home", method = "GET">
     <input type = "submit" name = "cancel" value = "Cancel">
   </form>
 {% endblock %}
