--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,9 +16,9 @@
   </ol>
   <h1>EDIT STORIES</h1>
   <ol>
-  {% for element in toEdit %}
+  {% for element in storyEdit %}
     <li>
-      <a href="read/{{element}}">{{element}}</a>
+      <a href="edit/{{element}}">{{element}}</a>
     </li>
   {% endfor %}
   </ol>
