--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,6 +15,13 @@
   {% endfor %}
   </ol>
   <h2>ADD TO STORIES</h2>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% if messages %}
+        <h2> {{ messages[0] }} </h2>
+      {% endif %}
+    {% endif %}
+  {% endwith %}
   <ol>
   {% for element in storyAdd %}
     <li>
