--- a/templates/add.html
+++ b/templates/add.html
@@ -9,7 +9,7 @@
   {{story}}
   <br><br>
   <form action = "/addToStory", method = "POST">
-    <input type = "text" name = "addition">
+    <textarea name = "addition" rows = "10" cols = "50"> </textarea><br>
     <input type = "submit" name = "sub4" value = "Submit">
   </form>
   <form action = "/home", method = "GET">
