--- a/templates/newpage.html
+++ b/templates/newpage.html
@@ -15,8 +15,8 @@
   <form action = "/add", method = "POST">
     Title of story:
     <input type = "text" name = "title"> <br>
-    Story beginning:
-    <input type = "text" name = "story"> <br>
+    Story beginning:<br>
+    <textarea name = "story" rows = "10" cols = "50"> </textarea><br>
     <input type = "submit" name = "submit" value = "Submit">
   </form>
   <br><br>
