--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -31,10 +31,10 @@
   </ol>
   <br>
   <form action = "/create">
-    <input type = "submit" name = "makenew" value = "Create new story">
+    <input type = "submit" name = "makenew" value = "Create New Story">
   </form>
   <form action = "/logout">
-    <input type = "submit" name = "sub3" value = "logout">
+    <input type = "submit" name = "sub3" value = "Logout">
   </form>
 {% endblock %}
 {% block footer %}
