--- a/templates/readonly.html
+++ b/templates/readonly.html
@@ -5,10 +5,10 @@
   {% endblock %}
 {% endblock %}
 {% block content %}
-  {{story}}
+  <p>{{story}}<p>
   <br><br>
   <form action = "/home", method = "GET">
-    <input type = "submit" name = "cancel" value = "Return home">
+    <input type = "submit" name = "cancel" value = "Return Home">
   </form>
 {% endblock %}
 {% block footer %}
