--- a/templates/newpage.html
+++ b/templates/newpage.html
@@ -13,9 +13,9 @@
     {% endif %}
   {% endwith %}
   <form action = "/add", method = "POST">
-    Title of story:
-    <input type = "text" name = "title"> <br>
-    Story beginning:<br>
+    <h1>Title of story:<h1>
+    <input type = "text" name = "title" class="title"> <br>
+    <h1>Story beginning:<h1><br>
     <textarea name = "story" rows = "10" cols = "50"> </textarea><br>
     <input type = "submit" name = "submit" value = "Submit">
   </form>
